objects/Webhook_Log__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Order_Id__c</fullName>
        <label>Customer Order Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <label>Order Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Webhook Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WH-Log-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webhook Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>